# ChangeLog for dev-util/geany-plugins
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*geany-plugins-0.18 (16 Nov 2009)

  16 Nov 2009; James Rowe <jnrowe@gmail.com> +geany-plugins-0.18.ebuild:
  Version bump [dc6].

  12 Nov 2009; James Rowe <jnrowe@gmail.com> geany-plugins-0.17.1.ebuild:
  Switched to EAPI 2.

  12 Nov 2009; James Rowe <jnrowe@gmail.com> geany-plugins-0.17.1.ebuild:
  Keyworded amd64.

  12 Nov 2009; James Rowe <jnrowe@gmail.com> geany-plugins-0.17.1.ebuild:
  Keyworded x86.

  03 Oct 2009; James Rowe <jnrowe@gmail.com> geany-plugins-0.17.1.ebuild:
  Install docs to /usr/share/doc/.

  27 Sep 2009; James Rowe <jnrowe@gmail.com> geany-plugins-0.17.1.ebuild:
  Keyworded ~x86.

*geany-plugins-0.17.1 (24 Sep 2009)

  24 Sep 2009; James Rowe <jnrowe@gmail.com> +geany-plugins-0.17.1.ebuild,
  +metadata.xml:
  Initial ebuild, by me.
