@@ -3,14 +3,14 @@ Hash: SHA1
 
 DIST geany-plugins-0.17.1.tar.bz2 539864 RMD160 fca17fe17070d24f42d59b21bb3cdac2f61f909b SHA1 0911b46308990ba535439d3b8e31d5a1df965597 SHA256 5a0aebd2e97669b5c2b6ee06904c7513474104ddbb033e5f5b698941c2a724e6
 DIST geany-plugins-0.18.tar.bz2 681074 RMD160 266265fb95c3dca8ab43d9927583ad1a271205c3 SHA1 4649900ec521d4d2b69c3deb10df9058b5d82d9b SHA256 a65e8b05c238cb782632b27e2ceb9ce347ae723f4a281c04fc2bf00345ecbc97
-EBUILD geany-plugins-0.17.1.ebuild 889 RMD160 ac398fe141d6486f7c5bf868495880382879be05 SHA1 542985f0ccc1ac2edbf4895c3e4c292e4e9a1159 SHA256 64650d1bd54a3733f825687cde129b9c841c6ffb8f1af7a8ba0e6db0f32f0e03
-EBUILD geany-plugins-0.18.ebuild 920 RMD160 5d8fe472da6545545a5a799edaa525c6c839d3c1 SHA1 d95b352878ab758684e2c46e527cdc789760c72b SHA256 89984e1ea0b25ca3071e1a51a5162aa161f20c425aeeabb527a1dd85582959e7
-MISC ChangeLog 895 RMD160 ee02ba1c7b6d26ebfbac79a35395d901da8c8a0e SHA1 7086e1a5c738af308dc11bcc657aca1e2e8e1b58 SHA256 8308622fe2652a1235501dc88eca7900cb80e616f242f495d5da71ed1f21ea59
+EBUILD geany-plugins-0.17.1.ebuild 947 RMD160 58fe649991f444cdde35a8d7b9292ec93a97e0ef SHA1 511bde5f0e4a01ac3378d33b179c2c57926fc30f SHA256 88a0fe2d1f936377b467e97e30dafd0591d100a683ee2965e6433c8158a6761b
+EBUILD geany-plugins-0.18.ebuild 955 RMD160 2cf54853beb09a03dba728cb5d80e9024667e310 SHA1 1ce0d1e529b8b128a19fc01b4b8edef48f898e08 SHA256 f2c8ce547f6d7a10aff12cf74b7d9ebe77ae5af39199e2b56be940091cce3794
+MISC ChangeLog 1053 RMD160 adbf0119559adf3e0db2ae5e6bbcf70fe343c539 SHA1 3a11510424a5b938ac1a53eedf97522c1281915a SHA256 2ac1cdfec7da5fb0d5dd04c2327aa85389a34f03cffb5c298a7bff766b7ccf70
 MISC metadata.xml 434 RMD160 10e3d2d19be250b2545bda99f172fb6ce924f1ea SHA1 84f47a64062094bcd28109e0fcf2de0cd128469f SHA256 86aeb34b8d1160293eecd9843adb09cc60df8c2c882a264032ca3232b43cbef1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAksA7MAACgkQzJrj3cAXR0nF9ACguUij/8Sv5S8qiCFrVfhQZcgp
-i74AoIQauQQieF0f/HpvXgFYzOU5U7ua
-=ochD
+iEYEARECAAYFAksA78sACgkQzJrj3cAXR0keQgCgs7XZ7Po4+QtKa7gCesQaAcsg
+BIoAn1B/4bmmEYqvZDUIY3cNvAYr5iwO
+=Ipxe
 -----END PGP SIGNATURE-----
