@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  16 Nov 2009; James Rowe <jnrowe@gmail.com> geany-plugins-0.17.1.ebuild,
+  geany-plugins-0.18.ebuild:
+  Restrict plugins to related geany version or later.
+
 *geany-plugins-0.18 (16 Nov 2009)
 
   16 Nov 2009; James Rowe <jnrowe@gmail.com> +geany-plugins-0.18.ebuild:
